--- a/Pensjonat2/Pensjonat2.csproj
+++ b/Pensjonat2/Pensjonat2.csproj
@@ -63,10 +63,15 @@
     <Compile Include="Migrations\202001300810152_Second.designer.cs">
       <DependentUpon>202001300810152_Second.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202001301716160_third.cs" />
+    <Compile Include="Migrations\202001301716160_third.designer.cs">
+      <DependentUpon>202001301716160_third.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReservationBook.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -78,6 +83,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202001300810152_Second.resx">
       <DependentUpon>202001300810152_Second.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202001301716160_third.resx">
+      <DependentUpon>202001301716160_third.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
